--- a/Amoeba AI.html
+++ b/Amoeba AI.html
@@ -547,6 +547,7 @@
 
 	function AI() {
 
+		bestCase = 8
 		check();
 
 		if ( (bestCaseIndex == undefined) || (table[bestCaseIndex] != 0) ) {
@@ -606,7 +607,7 @@
 
 	function check () {
 
-		bestCase = 0;
+		bestCase = 10;
 		bestCaseIndex = undefined;
 
 		/* Vertical */
@@ -709,59 +710,67 @@
 		for (var i = 0; i <= row.length-5; i++) {
 
 			var mask = String(row[i]) + String(row[i+1]) + String(row[i+2]) + String(row[i+3]) + String(row[i+4])
-		
-			if (mask == "11111") {
-				//alert("User Won");
-			} else if ( mask == "22222" ) {
-				//alert("Machine Won");
-			} else if (mask == "01111") {
-				// Prevent user from winnig
-				bestCase = 1
-				console.log("Mask: " + mask);
-				console.log("Start: " + startIndex);
-				console.log("Steps: " + steps);
-				console.log("Analyse Loop: " + i);
-				console.log("source:" + source)
-				bestCaseIndex = startIndex + (steps*i) + (0 * steps);
-			} else if (mask == "10111") {
-				// Prevent user from winnig
-				bestCase = 1
-				console.log("Mask: " + mask);
-				console.log("Start: " + startIndex);
-				console.log("Steps: " + steps);
-				console.log("Analyse Loop: " + i);
-				console.log("source:" + source)
-				bestCaseIndex = startIndex + (steps*i) + (1 * steps);
-			} else if (mask == "11011") {
-				// Prevent user from winnig
-				bestCase = 1;
-				console.log("Mask: " + mask);
-				console.log("Start: " + startIndex);
-				console.log("Steps: " + steps);
-				console.log("Analyse Loop: " + i);
-				console.log("source:" + source)
-				bestCaseIndex = startIndex + (steps*i) + (2 * steps);
-			} else if (mask == "11101") {
-				// Prevent user from winnig
-				bestCase = 1
-				console.log("Mask: " + mask);
-				console.log("Start: " + startIndex);
-				console.log("Steps: " + steps);
-				console.log("Analyse Loop: " + i);
-				console.log("source:" + source)
-				bestCaseIndex = startIndex + (steps*i) + (3 * steps);
-			} else if (mask == "11110") {
-				// Prevent user from winnig
-				bestCase = 1
-				console.log("Mask: " + mask);
-				console.log("Start: " + startIndex);
-				console.log("Steps: " + steps);
-				console.log("Analyse Loop: " + i);
-				console.log("source:" + source)
-				bestCaseIndex = startIndex + (steps*i) + (4 * steps);
-			} else {
 
-			} 
+			switch (mask) {
+
+				case "11111":
+					alert("User Won");
+					break;
+				case "22222":
+					alert("Machine Won");
+					break;
+				case "02222":
+					bestCase = 1
+					bestCaseIndex = startIndex + (steps*i);
+					break;
+				case "20222":
+					bestCase = 1;
+					bestCaseIndex = startIndex + (steps*i) + (1 * steps);
+					break;
+				case "22022":
+					bestCase = 1;
+					bestCaseIndex = startIndex + (steps*i) + (2 * steps);
+					break;		
+				case "22202":
+					bestCase = 1;
+					bestCaseIndex = startIndex + (steps*i) + (3 * steps);
+					break;		
+				case "22220":
+					bestCase = 1;
+					bestCaseIndex = startIndex + (steps*i) + (4 * steps);	
+					break;
+				case "01111":
+					if (bestCase >= 2) {
+						bestCase = 2;
+						bestCaseIndex = startIndex + (steps*i);
+					}
+					break;
+				case "10111":
+					if (bestCase >= 2) {
+						bestCase = 2;
+						bestCaseIndex = startIndex + (steps*i) + (1 * steps);
+					}	
+					break;	
+				case "11011":
+					if (bestCase >= 2) {
+						bestCase = 2;
+						bestCaseIndex = startIndex + (steps*i) + (2 * steps);
+					}	
+					break;	
+				case "11101":
+					if (bestCase >= 2) {
+						bestCase = 2;
+						bestCaseIndex = startIndex + (steps*i) + (3 * steps);
+					}	
+					break;	
+				case "11110":
+					if (bestCase >= 2) {
+						bestCase = 2;
+						bestCaseIndex = startIndex + (steps*i) + (4 * steps);
+					}	
+					break;		
+
+			}
 
 		}
 
