--- a/Amoeba AI.html
+++ b/Amoeba AI.html
@@ -3,6 +3,7 @@
 <head>
 
 	<title>Amoeba</title>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	<style>
 
@@ -14,6 +15,7 @@
 		background-color: rgb(235,235,235);
 		display: flex;
 		justify-content: center;
+		font-family: 'Open Sans';
 	}
 
 	* {
@@ -51,24 +53,71 @@
 		display: inline-block;
 		border-radius: 100%;
 		position: relative;
-		border: 3px solid rgb(160, 160, 160);
+		border: 3px solid #556270;
 		animation-name: scaleUpCircle;
 		animation-duration: 0.3s;
 		animation-fill-mode: forwards;
 	}
 
 	.circle-alt {
-		background-color: rgb(160, 160, 160);
+		background-color: #556270;
 	}
 
 	#reset-game-btn {
-		width: 600px;
+		width: 598px;
+		margin: 1px;
 		position: absolute;
-		top: -27px;
-		color: #b3b3b3;
+		top: -50px;
+		color: #a2a0a0;
 		background-color: rgb(220,220,220);
 		border: none;
 		padding: 5px
+	}
+
+	#modal-wrapper {
+		width: 100%;
+		height: 100%;
+		z-index: 200;
+		background-color: rgba(0,0,0,0.2);
+		position: absolute;
+	}
+
+	#modal {
+		width: 210px;
+		padding: 15px;
+		background-color: white;
+		z-index: 100;
+		color: rgb(110, 110, 110);
+		top: 120px;
+		position: relative;
+		margin: auto;
+		box-shadow: 0 0 1px 2px #969696;
+		border-radius: 3px;
+	}
+
+	#header {
+		text-align: center;
+		margin-bottom: 16px;
+		color: #4C5864;
+	}
+
+	.controll-btn {
+		background-color: #4C5864;
+		color: #E0E4CC;
+		border: 1px solid #E0E4CC;
+		border-radius: 3px;
+		padding: 4px 6px;
+		cursor: pointer;
+	}
+
+	.controll-btn:hover {
+		background-color: #E0E4CC;
+		color: #4C5864;
+		border: 1px solid #4C5864;
+	}
+
+	#mp {
+		float: right;
 	}
 
 	</style>
@@ -76,7 +125,21 @@
 </head>
 <body>
 
+	<div id="modal-wrapper">
 
+		<div id="modal">
+
+			<div class="modal-section">
+				<div id="header">Choose a mode</div>
+				<div id="controllers">
+					<button class="controll-btn" id="sp">Single Player</button>
+					<button class="controll-btn" id="mp">Multiplayer</button>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
 	
 	<main>
 
@@ -492,7 +555,18 @@
 <script>
 
 	$("#reset-game-btn").click(function() {
+		$("#modal-wrapper").show();
+	})
+
+	$(".controll-btn").click(function() {
 		resetGame();
+		var type = $(this).attr("id");
+		if ( type == "sp" ) {
+
+		} else {
+
+		}
+		$("#modal-wrapper").hide();
 	})
 
 	var isGameOver = false;
@@ -501,8 +575,6 @@
 
 	var x = '<span class="circle circle-alt"></span>';
 	var o = '<span class="circle"></span>';
-
-	resetGame();
 
 	const tableSize = 400;			
 
@@ -737,6 +809,10 @@
 	}
 
 	function analize(row, startIndex, steps, source) {
+
+		if (  "00000000000000000000" == row.join("") ) {
+			return false;
+		}
 
 		for (var i = 0; i <= row.length-5; i++) {
 
